[package]
name = "runeauth"
version = "0.1.0"
edition = "2021"
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/nepet/futhark"
readme = "README.md"
description = "Runeauth - Simple Extendable Cookies"
keywords = ["autorization", "cookies", "sercurity", "access-control"]
categories = ["authentication", "cryptography"]

[dependencies]
anyhow = "1.0.66"
base64 = "0.21.0"
crypto = "0.5.1"
env_logger = "0.10.0"
hex = "0.4.3"
indexmap = "2.0.0"
sha2 = { version = "0.10.6", features = ["compress"] }
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.5.1"
chrono = "0.4.24"
proc-macro2 = "1.0.60"

[[bench]]
name = "decoding_benchmark"
harness = false

[[bench]]
name = "padding_benchmark"
harness = false
